--- a/index.html
+++ b/index.html
@@ -188,16 +188,16 @@
   </p>
 
   <div class="gallery">
-    <img src="images/foto1.jpg" alt="🌻">
-    <img src="images/foto2.jpg" alt="🌻">
-    <img src="images/foto3.jpg" alt="🌻">
-    <img src="images/foto4.jpg" alt="🌻">
-    <img src="images/foto5.jpg" alt="🌻">
-    <img src="images/foto6.jpg" alt="🌻">
-    <img src="images/foto7.jpg" alt="🌻">
-    <img src="images/foto8.jpg" alt="🌻">
-    <img src="images/foto9.jpg" alt="🌻">
-    <img src="images/foto10.jpg" alt="🌻">
+    <img src="foto1.jpg" alt="🌻">
+    <img src="foto2.jpg" alt="🌻">
+    <img src="foto3.jpg" alt="🌻">
+    <img src="foto4.jpg" alt="🌻">
+    <img src="foto5.jpg" alt="🌻">
+    <img src="foto6.jpg" alt="🌻">
+    <img src="foto7.jpg" alt="🌻">
+    <img src="foto8.jpg" alt="🌻">
+    <img src="foto9.jpg" alt="🌻">
+    <img src="foto10.jpg" alt="🌻">
     </div>
 
   <button onclick="nextPage(4)">Next ➡️</button>
@@ -350,4 +350,5 @@
       flame.style.transform = `translateX(-50%) scale(${1 + Math.random() * 0.3})`;
     }, 300);
   }
+
 </script>
