--- a/index.html
+++ b/index.html
@@ -235,15 +235,15 @@
     Just a little glimpse of the moments we’ve shared together. Let’s keep creating memories! 💫
   </p>
   <div class="gallery">
-    <img src="images/foto11.jpg" alt="🌻">
-    <img src="images/foto12.jpg" alt="🌻">
-    <img src="images/foto13.jpg" alt="🌻">
-    <img src="images/foto14.jpg" alt="🌻">
-    <img src="images/foto15.jpg" alt="🌻">
-    <img src="images/foto16.jpg" alt="🌻">
-    <img src="images/foto17.jpg" alt="🌻">
-    <img src="images/foto18.jpg" alt="🌻">
-    <img src="images/foto19.jpg" alt="🌻">
+    <img src="foto11.jpg" alt="🌻">
+    <img src="foto12.jpg" alt="🌻">
+    <img src="foto13.jpg" alt="🌻">
+    <img src="foto14.jpg" alt="🌻">
+    <img src="foto15.jpg" alt="🌻">
+    <img src="foto16.jpg" alt="🌻">
+    <img src="foto17.jpg" alt="🌻">
+    <img src="foto18.jpg" alt="🌻">
+    <img src="foto19.jpg" alt="🌻">
   </div>
   <button onclick="nextPage(5)">Next 🌟</button>
 </div>
@@ -352,3 +352,4 @@
   }
 
 </script>
+
