--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HAPPY BIRTHDAY 🎉</title>
+  <title>HAPPY BIRTHDAY MUTIAAA🎉</title>
   <style>
     body {
       margin: 0;
@@ -106,7 +106,7 @@
 
   <!-- Halaman 1 -->
   <div class="page active" id="page1">
-    <h1>🎉 HAPPY 21st BIRTHDAY MUTIAAA 🎂</h1>
+    <h1>🎉 HAPPY 21st BIRTHDAY MUTIAAAKKK 🎂</h1>
     <p>Click the button below to begin your birthday adventure ✨</p>
     <button onclick="nextPage(2)">Start 🎁</button>
   </div>
@@ -177,7 +177,7 @@
 
 <!-- Halaman 3: Gallery -->
 <div class="page" id="page3">
-  <h2>Snapshots of You 📸</h2>
+ <h2 style="margin-bottom: 20px;">Snapshots of You 📸</h2>
   <p style="font-size:14px; color:gray; max-width:600px; margin:auto; text-align:center; line-height:1.6;">
     I love taking pictures of you because you’re always stylish, bright and cheerful, 
     and you pose gracefully like a sunflower in full bloom 🌻 <br><br>
@@ -352,4 +352,5 @@
   }
 
 </script>
+
 
