--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     <i>P.S. I picked a few highlights for you 🤭📂</i>
   </p>
 
-  <div class="gallery">
+  <div class="gallery" style="margin-bottom: 30px; padding-bottom: 20px;">
     <img src="foto1.jpg" alt="🌻">
     <img src="foto2.jpg" alt="🌻">
     <img src="foto3.jpg" alt="🌻">
@@ -352,6 +352,7 @@
   }
 
 </script>
+
 
 
 
