--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 </html>
 
 <!-- Halaman 3: Gallery -->
-<div class="page" id="page3">
+<div class="page" id="page3" style="height: auto;">
  <h2 style="margin-bottom: 10px;">Snapshots of You 📸</h2>
   <p style="font-size:14px; color:gray; max-width:600px; margin:auto; text-align:center; line-height:1.6;">
     I love taking pictures of you because you’re always stylish, bright and cheerful, 
@@ -352,6 +352,7 @@
   }
 
 </script>
+
 
 
 
