--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
 </style>
 
 <!-- Halaman 4: Memories -->
-<div class="page" id="page4">
-  <h2>Our Memories 📸</h2>
+<div class="page" id="page4" style="height: auto;">
+  <h2 style="margin-bottom: 10px;">Our Memories 📸</h2>
   <p style="font-size:14px; color:gray; max-width:500px; margin:auto;">
     Just a little glimpse of the moments we’ve shared together. Let’s keep creating memories! 💫
   </p>
@@ -352,6 +352,7 @@
   }
 
 </script>
+
 
 
 
